# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.5.0
==============================================

StarPU 1.4.1
==============================================

Small features:
  * Add starpu_mpi_tags_{allocate,free} functions to manage mpi data
    tags in distributed memory.

Changes:
  * Fix StarPUPY when not using asyncio: we can use concurrent.futures
    instead.
  * Add STARPU_CODELET_PROFILING environment variable to disable codelet task
    counting for applications to be able to have const codelets.
  * In performance bounds, take into account the standard deviation to get the
    "expected" upper bound, in terms of expected optimistic deviation from the
    average, rather than the average.

Small changes:
  * Fix function starpu_mpi_wait_for_all()
  * Fix building atomic functions with llvm on 32bit systems.
  * SOCL: Fix missing CL_CALLBACK for various callback functions
  * Update prologue function names for parallel workers

StarPU 1.4.0
==============================================

New features:
  * Add a starpu_mpi_task_submit-oriented way of submitting MPI tasks
    with functions starpu_mpi_task_exchange_data_before_execution() and
    starpu_mpi_task_exchange_data_after_execution()
  * Possibility to specify different directories to store performance
    model files with new variable STARPU_PERF_MODEL_PATH
  * Checkpoint mechanism for MPI applications
  * Transaction support
  * OpenMP LLVM support
  * Driver for HIP-based GPUs.
  * Fault tolerance support with starpu_task_ft_failed().
  * Julia programming interface.
  * Add get_max_size method to data interfaces for applications using data with
    variable size to express their maximal potential size.